--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -1,6 +1,8 @@
 .Home-container {
     width: 500px;
     margin: 0 auto;
+    border: 1px solid #D3D3D3;
+    border-radius: 5px;
 }
 
 .Home-button-container {
@@ -13,7 +15,7 @@
     align-items: center;
     height: 50px;
     width: 50%;
-    border: 1px solid black;
+    border: 1px solid #D3D3D3;
     cursor: pointer;
     font-weight: bold;
 }
