--- a/src/screens/create_question/CreateQuestion.css
+++ b/src/screens/create_question/CreateQuestion.css
@@ -38,7 +38,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: green;
+  background-color: #20B2AA;
   cursor: pointer;
 }
 
