--- a/src/screens/home/components/QuestionCard.css
+++ b/src/screens/home/components/QuestionCard.css
@@ -1,5 +1,5 @@
 .QuestionCard {
-    border: 1px solid #D3D3D3;
+    border: 1px solid #E0E0E0;
     border-radius: 5px;
     margin: 10px;
 }
@@ -9,7 +9,7 @@
     display: flex;
     align-items: center;
     background-color: #F0F0F0;
-    border-bottom: 1px solid #D3D3D3;
+    border-bottom: 1px solid #E0E0E0;
     padding: 5px 0 0 5px;
     margin-bottom: 10px;
 }
