--- a/src/screens/login/Login.css
+++ b/src/screens/login/Login.css
@@ -48,7 +48,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: green;
+  background-color: #20B2AA;
   cursor: pointer;
 }
 
