--- a/src/screens/question_detail/components/PollResults.css
+++ b/src/screens/question_detail/components/PollResults.css
@@ -1,5 +1,6 @@
 .PollResults {
-    border: 1px solid black;
+    border: 1px solid #D3D3D3;
+    border-radius: 5px;
 }
 
 .PollResults-container {
@@ -7,10 +8,45 @@
     justify-content: center;
 }
 
+.PollResults-header {
+    height: 50px;
+    display: flex;
+    align-items: center;
+    background-color: #F0F0F0;
+    border-bottom: 1px solid #D3D3D3;
+    padding: 5px 0 0 5px;
+}
+
+.PollResults-header-text {
+    text-align: left;
+    font-size: 16px;
+    font-weight: bold;
+    margin: 0;
+}
+
 .PollResults-img-container {
     width: 33%;
+}
+
+.PollResults-img-container {
+    width: 33%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-right: 1px solid #D3D3D3;
+}
+
+.PollResults-img {
+  height: 125px;
+  width: 125px;
+  border-radius: 50%;
+}
+
+.PollResults-h2 {
+  padding-left: 10px;
 }
 
 .PollResults-question-container {
     width: 67%;
 }
+
