--- a/src/shared_components/NavBar.css
+++ b/src/shared_components/NavBar.css
@@ -3,7 +3,7 @@
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    border-bottom: 2px solid green;
+    border-bottom: 2px solid #20B2AA;
     margin-bottom: 10px;
 }
 
@@ -36,7 +36,7 @@
 }
 
 .NavBar-navlink:hover {
-  background-color: green;
+  background-color: #20B2AA;
   color: white;
   font-weight: bold;
 }
